add support of sm3 hash (#18)
Co-authored-by: Shall <shall@ShalldeMacBook-Pro.local>

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ docs/utils/*.pyc
 deps/install
 deps/cache
 cmake-build-*/
+deps/src/
 
 # vim stuff
 [._]*.sw[a-p]
@@ -61,3 +62,6 @@ CMakeLists.txt.user
 
 # place to put local temporary files
 tmp
+
+# macos
+.DS_Store
