--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,11 @@ include(EthCcache)
 # Let's find our dependencies
 include(EthDependencies)
 if (NOT USE_SYSTEM_LIBRARIES)
-  include(fmtlib)
-  include(nlohmann-json)
-  include(range-v3)
+	include(fmtlib)
+	include(range-v3)
+	include(nlohmann-json)
+	include_directories(SYSTEM ${JSONCPP_INCLUDE_DIR})
+	include(ProjectBoost)
 endif()
 
 find_package(Threads)
