--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ concurrency:
 jobs:
     compile_macOS_release:
         name: upload standard binary of macOS x86
-        runs-on: macos-14
+        runs-on: macos-12
 
         steps:
             - uses: actions/checkout@v3
@@ -66,7 +66,7 @@ jobs:
 
     compile_macOS_arm_release:
         name: upload standard binary of macOS arm64
-        runs-on: macos-14
+        runs-on: macos-12
 
         steps:
             -   uses: actions/checkout@v3
@@ -133,7 +133,7 @@ jobs:
                 run: |
                     mkdir build
                     cd build
-                    cmake -G "Visual Studio 16 2019" ..
+                     cmake --build . --config Release
 
             -   name: Compile solc
                 run: |
@@ -195,7 +195,7 @@ jobs:
             -   name: Compile solc
                 run: |
                     cd build
-                    cmake -DCMAKE_BUILD_TYPE=Release  DTEST=OFF ..
+                    cmake -DCMAKE_BUILD_TYPE=Release  -DUSE_Z3=OFF ..
                     make -j2
 
             -   name: Store binary
@@ -207,7 +207,7 @@ jobs:
             -   name: Compile GM solc
                 run: |
                     cd build
-                    cmake -DBUILD_GM=ON ..
+                    cmake -DBUILD_GM=ON -DUSE_Z3=OFF ..
                     make -j2
 
             -   name: Store GM binary
