--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,7 +119,7 @@ jobs:
 
     compile_windows_release:
         name: upload standard binary of Windows
-        runs-on: windows-latest
+        runs-on: windows-2019
         steps:
             -   uses: actions/checkout@v3
                 with:
@@ -128,12 +128,6 @@ jobs:
             -   name: install Prerequisites
                 run: |
                     .\scripts\install_deps.ps1
-
-            - name: Install Visual Studio 2019
-              uses: microsoft/setup-vsdev@v1
-              with:
-                    vs-version: 2019
-                    configuration: Release
 
             -   name: Configure
                 run: |
