--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -132,7 +132,7 @@ jobs:
             -   name: Configure and Compile solc
                 run: |
                     mkdir build
-                    ..\deps\cmake\bin\cmake --build . -j 2 --target install --config Release
+                    cmake --build . -j 2 --target install --config Release
 
             -   name: Store binary
                 run: |
