--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -135,6 +135,7 @@ jobs:
             -   name: Configure and Compile solc
                 run: |
                     mkdir build
+                    cd build
                     cmake -G "Visual Studio 16 2019" -DUSE_Z3=OFF ..
                     msbuild solidity.sln /p:Configuration=Release
 
