--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -215,6 +215,32 @@ jobs:
                     mv build/solc/solc bin/
                     tar -cvzf solc-x86-gm.tgz bin/solc
 
+            -   name: compile wasm binary
+                run: |
+                    mkdir -p emscripten_build
+                    source ./scripts/common.sh
+                    cd emscripten_build
+                    emcmake cmake -DCMAKE_BUILD_TYPE=Release -DBoost_USE_STATIC_LIBS=1  -DBoost_USE_STATIC_RUNTIME=1  -DCMAKE_CXX_FLAGS="-Wno-unqualified-std-cast-call" -DTESTS=0 ..
+                    make soljson
+
+            -  name: Store wasm binary
+                run: |
+                    mkdir -p upload
+                    ./scripts/ci/pack_soljson.sh "emscripten_build/libsolc/soljson.js" "emscripten_build/libsolc/soljson.wasm" upload/soljson.js
+
+            -   name: compile wasm GM binary
+                run: |
+                    source ./scripts/common.sh
+                    cd emscripten_build
+                    rm -rf libsolc/soljson.js
+                    emcmake cmake -DCMAKE_BUILD_TYPE=Release -DBoost_USE_STATIC_LIBS=1  -DBoost_USE_STATIC_RUNTIME=1  -DCMAKE_CXX_FLAGS="-Wno-unqualified-std-cast-call" -DTESTS=0 -DBUILD_GM=ON ..
+                    make soljson
+
+            -  name: Store wasm GM binary
+                run: |
+                    ./scripts/ci/pack_soljson.sh "emscripten_build/libsolc/soljson.js" "emscripten_build/libsolc/soljson.wasm" upload/soljson-gm.js
+
+
             -   name: Upload solc binaries to release
                 uses: svenstaro/upload-release-action@v1-release
                 with:
@@ -230,5 +256,23 @@ jobs:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
                     file: solc-x86-gm.tgz
                     asset_name: solc-linux-gm.tar.gz
+                    tag: ${{ github.ref }}
+                    overwrite: true
+
+            -   name: Upload wasm binaries to release
+                uses: svenstaro/upload-release-action@v1-release
+                with:
+                    repo_token: ${{ secrets.GITHUB_TOKEN }}
+                    file: upload/soljson.js
+                    asset_name: soljson.js
+                    tag: ${{ github.ref }}
+                    overwrite: true
+
+            -   name: Upload wasm GM binaries to release
+                uses: svenstaro/upload-release-action@v1-release
+                with:
+                    repo_token: ${{ secrets.GITHUB_TOKEN }}
+                    file: upload/soljson-gm.js
+                    asset_name: soljson-gm.js
                     tag: ${{ github.ref }}
                     overwrite: true
