--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,9 @@ jobs:
 
             - name: Store binary
               run: |
+                  ./build/solc/solc --version
                   mkdir bin
-                  mv build/solc/solc bin/
-                  tar -cvzf solc-x86.tgz bin/solc
+                  mv build/solc/solc bin/solc-mac
 
             - name: Compile GM solc
               run: |
@@ -43,15 +43,15 @@ jobs:
 
             - name: Store GM binary
               run: |
-                  mv build/solc/solc bin/
-                  tar -cvzf solc-x86-gm.tgz bin/solc
+                  ./build/solc/solc --version
+                  mv build/solc/solc bin/solc-mac-gm
 
             - name: Upload solc binaries to release
               uses: svenstaro/upload-release-action@v1-release
               with:
                   repo_token: ${{ secrets.GITHUB_TOKEN }}
-                  file: solc-x86.tgz
-                  asset_name: solc-mac-x86.tar.gz
+                  file: solc-mac
+                  asset_name: solc-mac-x86
                   tag: ${{ github.ref }}
                   overwrite: true
 
@@ -59,8 +59,8 @@ jobs:
               uses: svenstaro/upload-release-action@v1-release
               with:
                   repo_token: ${{ secrets.GITHUB_TOKEN }}
-                  file: solc-x86-gm.tgz
-                  asset_name: solc-mac-x86-gm.tar.gz
+                  file: solc-mac-gm
+                  asset_name: solc-mac-x86-gm
                   tag: ${{ github.ref }}
                   overwrite: true
 
@@ -84,27 +84,27 @@ jobs:
 
             -   name: Store binary
                 run: |
+                    ./build/solc/solc --version
                     mkdir bin
-                    mv build/solc/solc bin/
-                    tar -cvzf solc-arrch64.tgz bin/solc
+                    mv build/solc/solc bin/solc-mac
 
             -   name: Compile GM solc
                 run: |
                     cd build
-                    cmake -DBUILD_GM=ON ..
+                    cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_PROCESSOR=aarch64 -DBUILD_GM=ON ..
                     make -j2
 
             -   name: Store GM binary
                 run: |
-                    mv build/solc/solc bin/
-                    tar -cvzf solc-arrch64-gm.tgz bin/solc
+                    ./build/solc/solc --version
+                    mv build/solc/solc bin/solc-mac-gm
 
             -   name: Upload solc binaries to release
                 uses: svenstaro/upload-release-action@v1-release
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
-                    file: solc-arrch64.tgz
-                    asset_name: solc-mac-arrch64.tar.gz
+                    file: solc-mac
+                    asset_name: solc-mac-arrch64
                     tag: ${{ github.ref }}
                     overwrite: true
 
@@ -112,8 +112,8 @@ jobs:
                 uses: svenstaro/upload-release-action@v1-release
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
-                    file: solc-arrch64-gm.tgz
-                    asset_name: solc-mac-arrch64-gm.tar.gz
+                    file: solc-mac-gm
+                    asset_name: solc-mac-arrch64-gm
                     tag: ${{ github.ref }}
                     overwrite: true
 
@@ -141,9 +141,9 @@ jobs:
 
             -   name: Store binary
                 run: |
+                    build\solc\Release\solc.exe --version
                     mkdir bin
-                    copy build\solc\Release\solc.exe bin\
-                    7z a solc.zip .\bin\solc.exe
+                    move build\solc\Release\solc.exe bin\
 
             -   name: Compile GM solc
                 run: |
@@ -153,15 +153,15 @@ jobs:
 
             -   name: Store GM binary
                 run: |
-                    copy build\solc\Release\solc.exe bin\
-                    7z a solc-gm.zip .\bin\solc.exe
+                    build\solc\Release\solc.exe --version
+                    move build\solc\Release\solc.exe bin\solc-gm.exe
 
             -   name: Upload solc binaries to release
                 uses: svenstaro/upload-release-action@v1-release
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
-                    file: solc.zip
-                    asset_name: solc-win.zip
+                    file: solc.exe
+                    asset_name: solc-win.exe
                     tag: ${{ github.ref }}
                     overwrite: true
 
@@ -169,14 +169,14 @@ jobs:
                 uses: svenstaro/upload-release-action@v1-release
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
-                    file: solc-gm.zip
-                    asset_name: solc-win-gm.zip
+                    file: solc-gm.exe
+                    asset_name: solc-win-gm.exe
                     tag: ${{ github.ref }}
 
 
     compile_linux_x86_release:
         name: upload standard binary of Linux x86
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-20.04
 
         steps:
             -   uses: actions/checkout@v3
@@ -200,9 +200,9 @@ jobs:
 
             -   name: Store binary
                 run: |
+                    ./build/solc/solc --version
                     mkdir bin
                     mv build/solc/solc bin/
-                    tar -cvzf solc-x86.tgz bin/solc
 
             -   name: Compile GM solc
                 run: |
@@ -212,15 +212,15 @@ jobs:
 
             -   name: Store GM binary
                 run: |
-                    mv build/solc/solc bin/
-                    tar -cvzf solc-x86-gm.tgz bin/solc
+                    ./build/solc/solc --version
+                    mv build/solc/solc bin/solc-gm
 
             -   name: Upload solc binaries to release
                 uses: svenstaro/upload-release-action@v1-release
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
-                    file: solc-x86.tgz
-                    asset_name: solc-linux.tar.gz
+                    file: solc
+                    asset_name: solc-linux-x86
                     tag: ${{ github.ref }}
                     overwrite: true
 
@@ -228,7 +228,7 @@ jobs:
                 uses: svenstaro/upload-release-action@v1-release
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
-                    file: solc-x86-gm.tgz
-                    asset_name: solc-linux-gm.tar.gz
+                    file: solc-gm
+                    asset_name: solc-linux-x86-gm
                     tag: ${{ github.ref }}
                     overwrite: true
