--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -195,6 +195,7 @@ jobs:
 
             -   name: Compile solc
                 run: |
+                    . /opt/rh/devtoolset-9/enable
                     mkdir build && cd build
                     cmake -DCMAKE_BUILD_TYPE=Release -DUSE_Z3=OFF ..
                     make -j2
