--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,8 @@ jobs:
                   ./build/solc/solc --version
                   mkdir bin
                   mv build/solc/solc bin/solc-mac
+                  cd bin
+                  tar -cvzf solc-mac.tar.gz solc-mac
 
             - name: Compile GM solc
               run: |
@@ -45,13 +47,15 @@ jobs:
               run: |
                   ./build/solc/solc --version
                   mv build/solc/solc bin/solc-mac-gm
+                  cd bin
+                  tar -cvzf solc-mac-gm.tar.gz solc-mac-gm
 
             - name: Upload solc binaries to release
               uses: svenstaro/upload-release-action@v1-release
               with:
                   repo_token: ${{ secrets.GITHUB_TOKEN }}
-                  file: bin/solc-mac
-                  asset_name: solc-mac-x86
+                  file: bin/solc-mac.tar.gz
+                  asset_name: solc-mac-x86.tar.gz
                   tag: ${{ github.ref }}
                   overwrite: true
 
@@ -59,8 +63,8 @@ jobs:
               uses: svenstaro/upload-release-action@v1-release
               with:
                   repo_token: ${{ secrets.GITHUB_TOKEN }}
-                  file: bin/solc-mac-gm
-                  asset_name: solc-mac-x86-gm
+                  file: bin/solc-mac-gm.tar.gz
+                  asset_name: solc-mac-x86-gm.tar.gz
                   tag: ${{ github.ref }}
                   overwrite: true
 
@@ -87,6 +91,8 @@ jobs:
                     ./build/solc/solc --version
                     mkdir bin
                     mv build/solc/solc bin/solc-mac
+                    cd bin
+                    tar -cvzf solc-mac.tar.gz solc-mac
 
             -   name: Compile GM solc
                 run: |
@@ -98,13 +104,15 @@ jobs:
                 run: |
                     ./build/solc/solc --version
                     mv build/solc/solc bin/solc-mac-gm
+                    cd bin
+                    tar -cvzf solc-mac-gm.tar.gz solc-mac-gm
 
             -   name: Upload solc binaries to release
                 uses: svenstaro/upload-release-action@v1-release
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
-                    file: bin/solc-mac
-                    asset_name: solc-mac-arrch64
+                    file: bin/solc-mac.tar.gz
+                    asset_name: solc-mac-arrch64.tar.gz
                     tag: ${{ github.ref }}
                     overwrite: true
 
@@ -112,8 +120,8 @@ jobs:
                 uses: svenstaro/upload-release-action@v1-release
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
-                    file: bin/solc-mac-gm
-                    asset_name: solc-mac-arrch64-gm
+                    file: bin/solc-mac-gm.tar.gz
+                    asset_name: solc-mac-arrch64-gm.tar.gz
                     tag: ${{ github.ref }}
                     overwrite: true
 
@@ -128,22 +136,21 @@ jobs:
             -   name: Add msbuild to PATH
                 uses: microsoft/setup-msbuild@v2
 
-            -   name: install Prerequisites
-                run: |
-                    .\scripts\install_deps.ps1
 
             -   name: Configure and Compile solc
                 run: |
                     mkdir build
                     cd build
                     cmake -G "Visual Studio 16 2019" -DUSE_Z3=OFF ..
-                    cmake --build . -j 2 --target install --config Release
+                    msbuild solidity.sln /p:Configuration=Release
 
             -   name: Store binary
                 run: |
                     build\solc\Release\solc.exe --version
                     mkdir bin
                     move build\solc\Release\solc.exe bin\
+                    cd bin
+                    zip -r solc-win.zip solc.exe
 
             -   name: Compile GM solc
                 run: |
@@ -155,13 +162,15 @@ jobs:
                 run: |
                     build\solc\Release\solc.exe --version
                     move build\solc\Release\solc.exe bin\solc-gm.exe
+                    cd bin
+                    zip -r solc-win-gm.zip solc-gm.exe
 
             -   name: Upload solc binaries to release
                 uses: svenstaro/upload-release-action@v1-release
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
-                    file: bin/solc.exe
-                    asset_name: solc-win.exe
+                    file: bin/solc-win.zip
+                    asset_name: solc-win.zip
                     tag: ${{ github.ref }}
                     overwrite: true
 
@@ -169,8 +178,8 @@ jobs:
                 uses: svenstaro/upload-release-action@v1-release
                 with:
                     repo_token: ${{ secrets.GITHUB_TOKEN }}
-                    file: bin/solc-gm.exe
-                    asset_name: solc-win-gm.exe
+                    file: bin/solc-win-gm.zip
+                    asset_name: solc-win-gm.zip
                     tag: ${{ github.ref }}
 
 
@@ -193,7 +202,7 @@ jobs:
                 run: |
                     yum install -y epel-release centos-release-scl wget 
                     yum update -y
-                    yum install -y devtoolset-9
+                    yum install -y devtoolset-9 git 
                     
 
             -   name: Compile solc
