--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -192,7 +192,6 @@ jobs:
             -   uses: actions/checkout@v3
                 with:
                     fetch-depth: 5
-                    path: /__w/solidity/solidity
 
             -   name: Setup cmake
                 uses: jwlawson/actions-setup-cmake@v1.14
@@ -208,7 +207,8 @@ jobs:
 
             -   name: Compile solc
                 run: |
-                    cd /__w/solidity/solidity
+                    tree /__w
+                    cd /__w/solidity/
                     git log
                     . /opt/rh/devtoolset-9/enable
                     mkdir build && cd build
